@@ -18,7 +18,9 @@ public class ScreenOffHandler implements HttpHandler {
         System.out.println("Turning Screen Off");
 
         //run this command to disable the screen
-        Runtime.getRuntime().exec("DISPLAY=:0 xset dpms force suspend");
+
+        Runtime.getRuntime().exec(new String[] { "bash", "-c", "DISPLAY=:0 xset dpms force suspend"});
+        //Runtime.getRuntime().exec("DISPLAY=:0 xset dpms force suspend");
 
     }
 }
